nova (2012.2-1) experimental; urgency=low

  [ Mehdi Abaakouk ]
  * New upstream version.

  [ Thomas Goirand ]
  * Ordered debian/control build-depends and python-nova depends by alpha
  order.
  * Added new dependency to python-babel.
  * Now uses setup.py to install python-nova.

  [ Roland Mas ]
  * No more build-dependency on python-glance (only -glanceclient).

 -- Roland Mas <roland@gnurandal.com>  Fri, 12 Oct 2012 11:24:55 +0200

nova (2012.2~rc1+git1-292a5e5-1) experimental; urgency=low

  [ Mehdi Abaakouk ]
  * New upstream version
  * Add patches:
     fix-ubuntu-tests.patch
     fix-docs-build-without-network.patch
  * Removed patches included by upstream:
     nova-manage_flagfile_location.patch
     CVE-2012-3360_CVE-2012-3361.patch
     stable_essex_20120710.patch
     iscsiadm_path.patch
     CVE-2012-3371.patch
     CVE-2012-3447_compute-node-file-injection.patch

  [ Thomas Goirand ]
  * Now using xz compression level 9 for all debs.

 -- Mehdi Abaakouk <sileht@sileht.net>  Mon, 10 Sep 2012 17:56:09 +0200

nova (2012.1.1-9) unstable; urgency=low

  [ Thomas Goirand ]
  * Added Debconf Chinese translation thanks to ben <duyujie.dyj@gmail.com>.

  [ Loic Dachary (OuoU) ]
  * revert to using --flagfile instead of --config-file in
    nova-compute.init because --flagfile supports both configuration file
    formats. Using --config-file forces to use the newest configuration
    file format and is not backward compatible. If upgrading from
    nova-compute-2012.1.1-4 to all versions until nova-compute-2012.1.1-8
    when using the old format in nova.conf, nova-compute will no longer
    run. It will silently fail to parse the older format and abort.
  
 -- Loic Dachary (OuoU) <loic@debian.org>  Mon, 03 Sep 2012 13:24:09 +0200

nova (2012.1.1-8) unstable; urgency=low

  * Corrected wrong encoding in the it.po (Closes: #685576).

 -- Thomas Goirand <zigo@debian.org>  Fri, 24 Aug 2012 05:30:21 +0000

nova (2012.1.1-7) unstable; urgency=low
