@@ -1,7 +1,7 @@
+debian/nova.conf	usr/share/nova-common
+etc/nova/api-paste.ini	usr/share/nova-common
+etc/nova/policy.json	etc/nova
+etc/nova/rootwrap.conf	etc/nova
+etc/nova/policy.json	etc/nova
 usr/bin/nova-manage
 usr/bin/nova-rootwrap
-etc/nova/policy.json etc/nova
-etc/nova/api-paste.ini usr/share/doc/nova-common
-etc/nova/rootwrap.conf etc/nova
-debian/nova.conf.dist usr/share/doc/nova-common
-etc/nova/policy.json etc/nova
