@@ -2,31 +2,31 @@
 
 set -e
 
-if [ -f /usr/share/debconf/confmodule ]; then
-    . /usr/share/debconf/confmodule
-fi
-
-db_get nova-common/configure_db
-if [ "$RET" = "true" ]; then
-
-    if [ -f /usr/share/dbconfig-common/dpkg/postrm ]; then
-        . /usr/share/dbconfig-common/dpkg/postrm
-        dbc_go nova-common $@
-    else
-        rm -f /etc/dbconfig-common/nova-common.conf
-        if which ucf >/dev/null 2>&1; then
-            ucf --purge /etc/dbconfig-common/nova-common.conf
-            ucfr --purge nova-common /etc/dbconfig-common/nova-common.conf
-        fi
-    fi
-fi
-
 if [ "$1" = "purge" ] ; then
-    rm -f /var/log/nova/nova-manage.log
-    rm -rf /var/lib/nova/CA
-    rm -f /var/lib/nova/.rnd
-    rm -f /etc/nova/nova.conf
-    rm -f /etc/default/nova-common
+	if [ -r /usr/share/debconf/confmodule ] ; then
+		. /usr/share/debconf/confmodule
+		db_get nova/configure_db || true
+		if [ "$RET" = "true" ] ; then
+			if [ -f /usr/share/dbconfig-common/dpkg/postrm ] ; then
+				. /usr/share/dbconfig-common/dpkg/postrm
+				dbc_go nova-common $@
+			else
+				rm -f /etc/dbconfig-common/nova-common.conf
+				if which ucf >/dev/null 2>&1; then
+					ucf --purge /etc/dbconfig-common/nova-common.conf
+					ucfr --purge nova-common /etc/dbconfig-common/nova-common.conf
+				fi
+			fi
+		fi
+	fi
+
+	rm -f /var/log/nova/nova-manage.log
+	rm -rf /var/lib/nova/CA
+	rm -f /var/lib/nova/.rnd
+	rm -f /etc/nova/nova.conf
+	rm -f /etc/default/nova-common
 fi
 
 #DEBHELPER#
+
+exit 0
